--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "dishka>=1.6.0",
     "fastapi>=0.116.1",
+    "isort>=6.0.1",
     "pre-commit>=4.2.0",
     "pydantic-settings",
     "pymarkdownlnt>=0.9.31",
